--- a/pag2.html
+++ b/pag2.html
@@ -11,11 +11,9 @@
     <body>
 		<nav class="menuinicial">
 			<ul>
-				<li><a href="index.html">Menu</a></li>
-				<li><a href="pag2.html">Mobs</a></li>
-				<li><a href="#">Biomas</a></li>
-				<li><a href="#">Dimensões</a></li>
-				<li><a href="#">Sobre</a></li>
+				<li><a href="index.html">Início</a></li>
+				<li><a href="pag2.html">Biomas</a></li>
+                <li><a href="">Dimensões</a></li>
 			</ul>
 		</nav>
 
