--- a/biomas.html
+++ b/biomas.html
@@ -38,6 +38,7 @@
                         <li><a href="#margensbio">Margens</a></li>
                     </ul>
                     <li><a href="#tiposbio">Tipos de biomas</a></li>
+                    <li><a href="#feedback">Feedback</a></li>
                 </ol>
             </nav>
             <div class="linhasBloco">
@@ -45,7 +46,7 @@
                 <h1><a name="geracao"></a>Geração</h1>
                 <hr>
             </div>
-            <h2><a name="aglomerados"></a>Aglomerados de biomas</h2>
+            <h2 class="h2formatado"><a name="aglomerados"></a>Aglomerados de biomas</h2>
             <p>Embora os biomas ainda estejam divididos em 5 categorias, a geração de biomas entre 1,7 e a versão atual difere um pouco das categorias de bioma descritas abaixo. Em geral, os biomas terrestres são gerados em 4 grupos diferentes; biomas frios, temperados, exuberantes ou secos. Grupos de biomas temperados e exuberantes são frequentemente indistinguíveis uns dos outros, no entanto, com a única diferença sendo áreas de taiga e áreas de pântanos, bétulas e florestas escuras. Os dois primeiros agrupamentos de bioma são geralmente os mais expansivos. Biomas frios e secos são gerados em aglomerados menores, mas ainda podem se estender por mil ou mais blocos. Biomas frios incluem a tundra nevada coberta de neve e a taiga nevada. Os biomas secos consistem em savanas, planícies e desertos. Os biomas de planícies são incomuns porque geram aglomerados de biomas secos, além de aglomerados de biomas exuberantes e temperados. Os aglomerados de biomas temperados e exuberantes contêm montanhas, planícies e florestas.</p>
 
             <p>Em climas de neve, a Tundra com neve pesa 3 vezes mais do que a taiga com neve: é muito mais comum do que a taiga com neve. Em climas secos, os desertos são pesados 3 vezes, as savanas 2 vezes e as planícies apenas uma.</p>
@@ -89,7 +90,22 @@
                         <td class="testando">Nestes biomas, não chove nem a neva. A folhagem e grama é verde oliva, exceto biomas de mesa, que têm grama marrom.</td>
                     </tr>
             </table>
+
+            <div class="linhasBloco">
+                <hr>
+                <h1><a name="feedback"></a>Envie-nos o seu comentário!</h1>
+                <hr>
+            </div>
+            <div class="comment">
+                <form action="#">
+                        <input type="text" name="nome" placeholder="Nome"/>
+                        <input type="email" name="email" placeholder="Email"/>
+                        <textarea name="comentario" placeholder="Adicionar um comentário..."></textarea>
+                        <button type="submit">Enviar comentário</button>
+                </form>
+            </div>
+            <br>
         </main>
-        <br><br>
+        <br>
     </body>
 </html>
