--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>Sobre o Jogo</h1>
                 <hr>
             </div>
-            <div id="video"><iframe width="400" height="225" src="https://www.youtube.com/embed/MmB9b5njVbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="400" height="225" src="https://www.youtube.com/embed/MmB9b5njVbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             <p><i>Minecraft</i> é um jogo eletrônico sandbox de sobrevivência criado pelo desenvolvedor sueco Markus "Notch" Persson e posteriormente desenvolvido e publicado pela Mojang Studios, cuja propriedade intelectual foi obtida pela Microsoft em 2014. Lançado inicialmente em maio de 2009 como um projeto em desenvolvimento, seu lançamento completo ocorreu em novembro de 2011 para Microsoft Windows, macOS e Linux, sendo posteriormente relançado para uma ampla variedade de plataformas. É o jogo eletrônico mais vendido de todos os tempos, vendendo mais de 238 milhões de cópias em todas as plataformas até abril de 2021, com mais de 140 milhões de jogadores ativos mensalmente.</p>
 
             <p>Em <i>Minecraft</i>, os jogadores exploram um mundo aberto tridimensional intencionalmente em blocos, pixelizado e gerado proceduralmente, podendo descobrir e extrair matérias-primas, ferramentas artesanais, construir estruturas ou terraplenagens e, dependendo do modo de jogo, podem combater inimigos controlados por computador, bem como cooperar ou competir contra outros jogadores no mesmo mundo. Esses modos incluem um modo sobrevivência, no qual o jogador precisa adquirir recursos para construir o mundo e se manter vivo, e um modo criativo, onde os jogadores têm recursos ilimitados. Em <i>Java Edition</i>, os jogadores podem modificar a jogabilidade com <i>mods</i> para criar novas mecânicas de itens, texturas, entre outros.</p>
@@ -54,7 +54,7 @@
 
             <p>O mundo de <i>Minecraft</i> é virtualmente quase infinito e gerado proceduralmente à medida que os jogadores o exploram, usando um mapa ou uma bússola no momento da criação do mundo (ou manualmente conquistado pelo jogador). Existem limites para o movimento vertical, mas <i>Minecraft</i> permite que um enorme mundo seja gerado no plano horizontal. Devido a problemas técnicos quando locais extremamente distantes são alcançados, no entanto, existe uma barreira que impede os jogadores de atravessar para locais além de 30 milhões de blocos a partir do centro do mundo, conhecida como Far Lands. O jogo consegue fazer isso dividindo os dados do mundo em seções menores, que são criadas ou carregadas apenas quando os jogadores estão por perto. O mundo é dividido em biomas que variam de desertos a selvas e campos de neve; alguns terrenos incluem planícies, montanhas, florestas, cavernas e vários corpos de lava e água. O sistema de tempo no jogo segue um ciclo dia e noite, e um ciclo completo dura vinte minutos em tempo real.</p>
 
-            <div id="jogabilidade"><img src="img/jogabilidade.jpg" alt="jogabilidade"></div>
+            <div class="video" id="jogabilidade"><img width="400" height="225" src="img/jogabilidade.jpg" alt="jogabilidade"></div>
 
             <p>Novos jogadores possuem um personagem padrão aleatoriamente selecionado, de Steve ou Alex, mas a opção de criar skins personalizadas foi disponibilizada a partir de 2010. Os jogadores encontram vários personagens não-jogavéis (NPCs) no mundo do jogo, conhecidos como mobs, como animais, aldeões e criaturas hostis. Seres passivos, como vacas, porcos e galinhas, podem ser caçados para obter comida e materiais de artesanato. Eles aparecem durante o dia, enquanto criaturas hostis — incluindo grandes aranhas, esqueletos e zumbis — aparecem durante a noite ou em locais escuros, como cavernas. Alguns desses seres hostis, como zumbis e esqueletos, queimam sob o sol se não tiverem arnês. Outras criaturas exclusivas de <i>Minecraft</i> incluem um creeper (uma criatura explosiva que se aproxima do jogador) e o enderman (uma criatura com a capacidade de se teletransportar, pegar e colocar blocos). Existem também variantes de mobs que aparecem em diferentes condições; por exemplo, zumbis têm variantes de casca que aparecem nos desertos.</p>
 
@@ -63,27 +63,83 @@
             <p><i>Minecraft</i> consiste em cinco modos de jogo: sobrevivência, criativo, aventura, hardcore e espectador. Ele também tem um sistema de dificuldade variável de quatro níveis. Por exemplo, a dificuldade pacífica impede que criaturas hostis desovem, e a dificuldade difícil permite que os jogadores morram de fome se sua barra de fome estiver esgotada.</p>
             
             <table id="modos">
-                <tr bgcolor="#326048" align="center">
-                    <th height="50px" width="150px">Modos</th>
-                    <th>Voa</th>
-                    <th>Morre</th>
+                <tr id="l1c1">
+                    <th>Modos</th>
+                    <th>Sobrevive</th>
                     <th>Comandos</th>
+                    <th>Vôo</th>
+                    <th>Infinitos blocos</th>
+                    <th>Morte</th>
+                    <th>Destrói blocos instantâneo</th>
+                    <th>Observa o mundo</th>
+                    <th>Níveis de dificuldade</th>
+                    <th>Uma vida</th>
+                    <th>Quebra blocos sem ferramenta</th>
                 </tr>
-                <tr bgcolor="#8FD6BB" align="center">
-                    <td height="50px" bgcolor="#469CB6">Sobrevivência</td>
-                    <td class="testando">Nestes biomas, há precipitação de neve em qualquer altura. A folhagem e a grama serão verde-azuladas.</td>
+                <tr>
+                    <td id="c1">Sobrevivência</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
                 </tr>
-                <tr height="50px" bgcolor="#8FD6BB" align="center">
-                    <td bgcolor="#469CB6">Criativo</td>
-                    <td class="testando">Nestes biomas a neve começa acima uma certa altura, mas antes da altura de 256 blocos. Caso contrário, chove. A folhagem e grama serão verde-azuladas.</td>
+                <tr>
+                    <td id="c1">Hardcore</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
                 </tr>
-                <tr height="50px" bgcolor="#8FD6BB" align="center">
-                    <td bgcolor="#469CB6">Aventura</td>
-                    <td class="testando">Nestes biomas, começa a nevar acima do limite de altura de 256 blocos. Caso contrário, chove. A folhagem e grama é verde exuberante, exceto o pântano, floresta coberta e biomas de selva, que têm grama de cor escura e brilhante.</td>
+                <tr>
+                    <td id="c1">Adventure</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
                 </tr>
-                <tr height="50px" bgcolor="#8FD6BB" align="center">
-                    <td bgcolor="#469CB6">Espectador</td>
-                    <td class="testando">Nestes biomas, não chove nem a neva. A folhagem e grama é verde oliva, exceto biomas de mesa, que têm grama marrom.</td>
+                <tr>
+                    <td id="c1">Criativo</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                </tr>
+                <tr>
+                    <td id="c1">Espectador</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="verdadeiro">V</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
+                    <td id="falso">F</td>
                 </tr>
             </table>
 
