--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lan="pt-br" dir="ltr">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Wagner Leandro">
+    <meta name="author" content="Nikeldon Carvalho"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
